<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
	<TextView
      android:id="@+id/usernameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:text="@string/username"
      android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/usernameLabel"
        android:layout_toEndOf="@+id/usernameLabel"
        android:inputType="text" />
   	<TextView
      android:id="@+id/passwordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/usernameLabel"
      android:paddingTop="30dp"
      android:text="@string/password"
      android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/passwordLabel"
        android:layout_toEndOf="@+id/passwordLabel"
        android:layout_alignBottom="@+id/passwordLabel"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/browseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:text="@string/browse" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/browseButton"
        android:layout_centerVertical="true"
        android:text="@string/register" />
    
    <TextView
        android:id="@+id/landingWelcome"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/registerButton"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/welcome"
		android:textStyle="bold|italic"
		android:textColor="@color/ten_purple"
        />


</RelativeLayout>
