<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout         
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
      android:id="@+id/firstNameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:text="@string/firstname"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/firstNameLabel"
        android:layout_toEndOf="@+id/firstNameLabel"
        android:inputType="text" />
    <TextView
      android:id="@+id/lastNameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/firstNameLabel"
      android:text="@string/lastname"/>
    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lastNameLabel"
        android:layout_toEndOf="@+id/lastNameLabel"
        android:layout_alignBottom="@id/lastNameLabel"
        android:inputType="text" />
    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_below="@+id/lastNameLabel"/>
    <TextView
      android:id="@+id/usernameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/divider1"
      android:text="@string/username"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/usernameLabel"
        android:layout_toEndOf="@+id/usernameLabel"
        android:layout_alignBottom="@id/usernameLabel"
        android:inputType="text" />
   	<TextView
      android:id="@+id/passwordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:paddingTop="20dp"
      android:layout_below="@+id/usernameLabel"
      android:text="@string/password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/passwordLabel"
        android:layout_toEndOf="@+id/passwordLabel"
        android:layout_alignBottom="@+id/passwordLabel"
        android:inputType="textPassword"
        />
    <TextView
      android:id="@+id/passwordConfirmLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/passwordLabel"
      android:paddingTop="20dp"
      android:text="@string/passwordConfirm" />
    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/passwordConfirmLabel"
        android:layout_toEndOf="@+id/passwordConfirmLabel"
        android:layout_alignBottom="@+id/passwordConfirmLabel"
        android:inputType="textPassword"
        />
    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        android:layout_below="@+id/passwordConfirmLabel"/>
    <TextView
      android:id="@+id/emailLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/divider2"
      android:paddingTop="20dp"
      android:text="@string/email" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/emailLabel"
        android:layout_toEndOf="@+id/emailLabel"
        android:layout_alignBottom="@+id/emailLabel"
        android:inputType="textEmailAddress"
        />
    <TextView
      android:id="@+id/schoolLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/emailLabel"
      android:paddingTop="20dp"
      android:text="@string/school" />
    <EditText
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/schoolLabel"
        android:layout_toEndOf="@+id/schoolLabel"
        android:layout_alignBottom="@+id/schoolLabel"
        android:inputType="text"
        />
    <TextView
      android:id="@+id/birthLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/schoolLabel"
      android:paddingTop="20dp"
      android:text="@string/birthday" />
    <Button
        android:id="@+id/birthChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_toRightOf="@+id/birthLabel"
        android:layout_toEndOf="@+id/birthLabel"
        android:layout_alignTop="@+id/birthLabel"
		android:text="@string/choosedate"
        />
    <TextView
      android:id="@+id/phoneLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/birthLabel"
      android:paddingTop="20dp"
      android:text="@string/phone" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/phoneLabel"
        android:layout_toEndOf="@+id/phoneLabel"
        android:layout_alignBottom="@+id/phoneLabel"
		android:inputType="phone"
        />
    <Button
        android:id="@+id/registerSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneLabel"
        android:text="@string/registeraccount"
        />
</RelativeLayout>
</ScrollView>