<RelativeLayout    
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventsCreateView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <TextView
        android:id="@+id/ecCreateTitle"
        android:text="Create an Event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />
    <TextView
      android:id="@+id/ecNameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ecCreateTitle"
      android:text="@string/ec_name"/>
    <EditText
        android:id="@+id/ecName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ecNameLabel"
        android:layout_toEndOf="@+id/ecNameLabel"
        android:layout_alignBottom="@+id/ecNameLabel"
        android:inputType="text" />
    <TextView
      android:id="@+id/ecLocationLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ecNameLabel"
      android:text="@string/ec_location"/>
    <EditText
        android:id="@+id/ecLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ecLocationLabel"
        android:layout_toEndOf="@+id/ecLocationLabel"
        android:layout_alignBottom="@id/ecLocationLabel"
        android:inputType="text" />
    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_below="@+id/ecLocation"/>
    <TextView
      android:id="@+id/ecTypeLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/divider1"
      android:text="@string/ec_type"/>
    <EditText
        android:id="@+id/ecType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ecTypeLabel"
        android:layout_toEndOf="@+id/ecTypeLabel"
        android:layout_alignBottom="@id/ecTypeLabel"
        android:inputType="text" />
   	<TextView
      android:id="@+id/ecCategoryLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:paddingTop="20dp"
      android:layout_below="@+id/ecTypeLabel"
      android:text="@string/ec_category"/>
    <EditText
        android:id="@+id/ecCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ecCategoryLabel"
        android:layout_toEndOf="@+id/ecCategoryLabel"
        android:layout_alignBottom="@+id/ecCategoryLabel"
        android:inputType="text"
        />
    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        android:layout_below="@id/ecCategoryLabel"/>
    <TextView
      android:id="@+id/ecTimeLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/divider2"
      android:paddingTop="20dp"
      android:text="@string/ec_time" />
    <Button
        android:id="@+id/ecTimeChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_toRightOf="@+id/ecTimeLabel"
        android:layout_toEndOf="@+id/ecTimeLabel"
        android:layout_alignTop="@+id/ecTimeLabel"
		android:text="@string/choosedate"
        />
    <TextView
      android:id="@+id/ecCostLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ecTimeLabel"
      android:paddingTop="20dp"
      android:text="@string/ec_cost" />
    <EditText
        android:id="@+id/ecCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ecCostLabel"
        android:layout_toEndOf="@+id/ecCostLabel"
        android:layout_alignBottom="@+id/ecCostLabel"
		android:inputType="phone"
        />
    <Button
        android:id="@+id/ecCreateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ecCost"
        android:text="@string/ec_create_button"
        />
</RelativeLayout>